# red-giant

./: .gitignore  .replit  .rhezusport  ADAPTIVE_PROTOCOL.md  CGO_SUCCESS.md  CHAT_FUNCTIONALITY_FIXES.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT-STATUS.md  DEVELOPMENT.md  Dockerfile.production  FINAL_WORKING_SUMMARY.md  IMPROVEMENTS-SUMMARY.md  LICENSE  MOBILE_PERFORMANCE_GUIDE.md  Makefile  Makefile.examples  Makefile.win  P2P_SYSTEM_OVERVIEW.md  PACKAGING_IMPLEMENTATION.md  PR_SUMMARY.md  QUICK_START.md  README.md  README_PRODUCTION.md  SECURITY.md  STATUS.md  WORKING_SYSTEM.md  adaptive_demo.go  benchmark_demo.go  benchmark_output.txt  build.bat  cert.pem  client.go  concurrent_demo.go  concurrent_output.txt  demo.go  demo_p2p.go  deploy.sh  deploy_replit.sh  (+68 more)
.ccls-cache/@@home@runner@workspace/: @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno-base.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@close_range.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@errno.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stdarg___gnuc_va_list.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_header_macro.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_max_align_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_null.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_offsetof.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_ptrdiff_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_size_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_wchar_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stdarg.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stdatomic.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stdbool.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stddef.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stdint.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@alloca.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@atomic_wide_counter.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@byteswap.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@confname.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@endian.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@endianness.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@environments.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@errno.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@floatn-common.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@floatn.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@getopt_core.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@getopt_posix.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@libc-header-start.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@long-double.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@posix_opt.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@pthreadtypes-arch.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@pthreadtypes.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@select.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@stdint-intn.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@stdint-least.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@stdint-uintn.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@stdio_lim.h.blob  (+62 more)
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  (+1 more)
analytics/: README.md  perf_monitor.c  perf_monitor.h  test_perf_monitor.c
bindings/python/: README.md  pyproject.toml  rgtp.py
bindings/python/examples/: pull_file.py
bindings/python/rgtp/: __init__.py  _rgtp.py  cli.py
bindings/python/rgtp.egg-info/: PKG-INFO
bindings/python/tests/: __init__.py  test_rgtp.py
cmake/: RgtpAnalysis.cmake  rgtp-config.cmake.in
deploy/: README.md
doc/: GLOBAL_TESTING_GUIDE.md  INTEGRATION_GUIDE.md  README_C_WRAPPER.md  SDK_BUG_FIXES.md  WRAPPER_IMPLEMENTATION_SUMMARY.md
docs/: README.md  WINDOWS_DEMO_README.md  _config.yml  _legacy_api.md  advantages.md  architecture.md  benefits_analysis.md  direct_memory_access.md  getting-started.md  limitations.md  protocol-spec.md  security-guide.md
examples/: README.md  direct_memory_access.c  direct_memory_pull.c  test-build.ps1
fileshare_app/: Dockerfile  README.md  deploy-gcp.bat  deploy-gcp.sh  docker-compose.yml  go.mod  handlers.go  main.go  redgiant_client.go
scripts/: build-binaries.js  setup-launchpad.sh
sdk/: README.md  test_sdk_fixes.js  test_sdk_fixes.py
test/: test_core.js  test_features.js  test_performance.js  test_runner.js
tests/: test_basic.c
webtransport/: README.md  rgtp_http3_proxy.c  rgtp_http3_proxy.h  test_http3_proxy.c
(+205 files in other folders)
