[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rgtp"
version = "1.0.0"
description = "Python bindings for the Red Giant Transport Protocol"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["rgtp", "transport", "protocol", "networking", "autonomous-vehicles"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/your-org/red-giant"
Documentation = "https://your-org.github.io/red-giant"

[tool.setuptools.packages.find]
where = ["."]
include = ["rgtp*"]
