[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgtp"
version = "1.0.0"
description = "Python bindings for the Red Giant Transport Protocol — stateless, receiver-driven, chunk-based transport over UDP and raw Ethernet"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = [
    "rgtp", "transport", "protocol", "networking",
    "udp", "autonomous-vehicles", "fec", "merkle",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/rawscript/red-giant"
Documentation = "https://rawscript.github.io/red-giant"
Repository = "https://github.com/rawscript/red-giant"
"Bug Tracker" = "https://github.com/rawscript/red-giant/issues"

[project.scripts]
rgtp-expose = "rgtp.cli:cmd_expose"
rgtp-pull   = "rgtp.cli:cmd_pull"

[tool.setuptools.packages.find]
where = ["."]
include = ["rgtp*"]

[tool.setuptools.package-data]
rgtp = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["rgtp"]
omit = ["tests/*"]
